--- a/styles/joseph.css
+++ b/styles/joseph.css
@@ -2,3 +2,10 @@
     display: grid;
     grid-template-columns: 40% 60%;
 }
+
+.sectionItem1_1{
+    grid-column: 1;
+    width: 100%;
+    height: auto;
+    
+}
