--- a/styles/joseph.css
+++ b/styles/joseph.css
@@ -1,11 +1,94 @@
+@font-face { font-family:Fugaz One; src: url("../fonts/FugazOne-Regular.ttf"); }
+@font-face { font-family:Montauk-Regular; src: url("../fonts/Montauk-Regular.otf"); }
+
 .section1{
     display: grid;
-    grid-template-columns: 40% 60%;
+    grid-template-columns: 42% 58%;
+    padding:44px 7.3%;
 }
 
 .sectionItem1_1{
     grid-column: 1;
     width: 100%;
-    height: auto;
-    
+}
+
+.sectionItem1_2{
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    margin-left: 15px;
+    padding: 30px 40px;
+    padding-right: 64px;
+}
+
+.sectionItem1_2_Title{
+    color: #5F002B;
+    font-family: Fugaz One;
+    font-size: 50px;
+    line-height: 1.1;
+}
+
+.sectionItem1_2_Paragraph{
+    color: #5F002B;
+    font-family: Montauk-Regular;
+    font-size: 20px;
+    line-height: 1.26;
+}
+
+.section2{
+    display: grid;
+    grid-template-columns: 1fr 16px 1fr 16px 1fr;
+    grid-template-rows: 80px 34px 732px 20px 732px;
+    padding: 44px 7.3%; 
+}
+
+.sectionItem2_1{
+    background-color: white;
+    grid-row: 1;
+    grid-column: 1/spans;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sectionItem2_1 * {
+    color: #5F002B;
+    font-size: 30px;
+    font-family: Fugaz One;
+}
+
+.sectionItem2_2-7{
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+.sectionItem2_2-7 .title{
+    color: #5F002B;
+    font-size: 30px;
+    font-family: Fugaz One;
+    padding: 0px 30px ;
+    padding-top: 13px;
+}
+
+.sectionItem2_2-7 .description{
+    color: #5F002B;
+    font-size: 20px;
+    font-family: Montauk-Regular;
+    line-height: 1.1;
+    padding: 0px 30px ;
+}
+
+.footer{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-row: 1fr 1fr;
+    padding: 44px 7.3%; 
+}
+
+.footer .text{
+    color: #5F002B;
+    font-family: Montauk-Regular;
+    font-size: 20px;
+    line-height: 1.1;
 }
