--- a/styles/master.css
+++ b/styles/master.css
@@ -9,6 +9,11 @@ body {
     color: #5F002B;
 }
 
+.navbar {
+    padding-left: 10%;
+    padding-right: 128px;
+}
+
 #navbarNav {
     display: flex;
     justify-content: end;
