--- a/styles/treece.css
+++ b/styles/treece.css
@@ -2,6 +2,8 @@
 
 .bkGround {
     background-color: white;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .txtColor {
@@ -9,3 +11,15 @@
     font-family: Fugaz One, sans-serif;
 }
 
+.menu{
+    display: grid;
+    grid-template-columns: 1fr 16px 1fr;
+    grid-template-rows: 250px 677px 20px 250px 677px;
+    padding: 0px 7.3% ;
+}
+
+.menu .photo1{
+    grid-row: 1;
+    grid-column: 1;
+    width: 100%;
+}
