--- a/styles/georgeStyles.css
+++ b/styles/georgeStyles.css
@@ -1,7 +1,8 @@
 .header {
     margin-top: 1rem;
     margin-bottom: 1rem;
-    height: 37.5em;
+    /* height: 37.5em; */
+    height: 55.56vh;
     background-image: url(../assets/homeHero.jpg);
     background-size: cover;
   }
