--- a/styles/joseph.css
+++ b/styles/joseph.css
@@ -4,6 +4,12 @@
 
 /*About Sections*/
 
+@media only screen and (max-width: 600px) {
+    body {
+      background-color: lightblue;
+    }
+  }
+
 .aboutSection1{
     display: grid;
     grid-template-columns: 42% 58%;
@@ -40,7 +46,7 @@
 
 .aboutSection2{
     display: grid;
-    grid-template-columns: 1fr 16px 1fr 16px 1fr;
+    grid-template-columns: 32.68% 0.98% 32.68% 0.98% 32.68% ;
     grid-template-rows: 80px 34px 732px 20px 732px;
     padding: 44px 7.3%; 
 }
