--- a/styles/treece.css
+++ b/styles/treece.css
@@ -18,7 +18,12 @@
     color: #5F002B;
     font-family: Montauk, sans-serif;
     font-size: 20px;
-    
+}
+
+.fntName {
+    color: #5F002B;
+    font-family: Montauk, sans-serif;
+    font-size: 20px;
 }
 
 .font {
