--- a/styles/joseph.css
+++ b/styles/joseph.css
@@ -1,57 +1,326 @@
-@font-face { font-family:Fugaz One; src: url("../fonts/FugazOne-Regular.ttf"); }
-@font-face { font-family:Montauk-Regular; src: url("../fonts/Montauk-Light.otf"); }
+@font-face {
+    font-family: Fugaz One;
+    src: url("../fonts/FugazOne-Regular.ttf");
+}
+
+@font-face {
+    font-family: Montauk-Regular;
+    src: url("../fonts/Montauk-Light.otf");
+}
 
 
 /*About Sections*/
 
-@media only screen and (max-width: 600px) {
-    body {
-      background-color: lightblue;
+/* Desktop */
+@media only screen and (min-width: 1920px) {
+    .aboutSection1 {
+        display: grid;
+        grid-template-columns: 42% 58%;
+        padding: 44px 7.3%;
     }
-  }
 
-.aboutSection1{
-    display: grid;
-    grid-template-columns: 42% 58%;
-    padding:44px 7.3%;
+    .aboutSectionItem1_2 {
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        margin-left: 15px;
+        padding: 30px 40px;
+        padding-right: 64px;
+    }
+
+    .aboutSection2 {
+        display: grid;
+        grid-template-columns: 32.68% 0.98% 32.68% 0.98% 32.68%;
+        grid-template-rows: 80px 34px 732px 20px 732px;
+        padding: 44px 7.3%;
+    }
+
+    .aboutSection2 .location1{
+        grid-row: 3;
+        grid-column: 1;
+    }
+
+    .aboutSection2 .location2{
+        grid-row: 3;
+        grid-column: 3;
+    }
+
+    .aboutSection2 .location3{
+        grid-row: 3;
+        grid-column: 5;
+    }
+
+    .aboutSection2 .location4{
+        grid-row: 5;
+        grid-column: 1;
+    }
+
+    .aboutSection2 .location5{
+        grid-row: 5;
+        grid-column: 3;
+    }
+
+    .aboutSection2 .location6{
+        grid-row: 5;
+        grid-column: 5;
+    }
+
+    .footer {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-row: 1fr 1fr;
+        padding: 44px 7.3%;
+    }
+    
+    .footer .text {
+        color: #5F002B;
+        font-family: Montauk-Regular;
+        font-size: 20px;
+        line-height: 1.1;
+    }
+
+    .footer .location1{
+        grid-row: 1;
+        display: flex;
+        align-self: end;
+    }
+
+    .footer .location2{
+        grid-row: 2;
+        display: flex;
+        align-self: end;
+    }
+
+    .footer .location3{
+        grid-row: 1;
+        display: flex;
+        align-self: end;
+        justify-self: end;
+    }
+
+    .footer .location4{
+        grid-row: 2;
+        display: flex;
+        align-self: end;
+        justify-self: end;
+    }
 }
 
-.aboutSectionItem1_1{
+/* Tablet */
+@media only screen and (min-width: 768px) and (max-width: 1919px) {
+    .aboutSection1 {
+        display: grid;
+        grid-template-rows: 40% auto;
+        padding: 44px 7.3%;
+    }
+
+    .aboutSectionItem1_2 {
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        padding: 30px 40px;
+        padding-right: 64px;
+    }
+
+    .aboutSection2 {
+        display: grid;
+        grid-template-columns: 49% 2% 49%;
+        grid-template-rows: 80px 34px 1fr 20px 1fr 20px 1fr;
+        padding: 44px 7.3%;
+    }
+
+    .aboutSection2 .location1{
+        grid-row: 3;
+        grid-column: 1;
+    }
+
+    .aboutSection2 .location2{
+        grid-row: 3;
+        grid-column: 3;
+    }
+
+    .aboutSection2 .location3{
+        grid-row: 5;
+        grid-column: 1;
+    }
+
+    .aboutSection2 .location4{
+        grid-row: 5;
+        grid-column: 3;
+    }
+
+    .aboutSection2 .location5{
+        grid-row: 7;
+        grid-column: 1;
+    }
+
+    .aboutSection2 .location6{
+        grid-row: 7;
+        grid-column: 3;
+    }
+
+    .footer {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 35px 35px;
+        padding: 33px 7.3%;
+    }
+    
+    .footer .text {
+        color: #5F002B;
+        font-family: Montauk-Regular;
+        font-size: 18px;
+        line-height: 1.1;
+    }
+
+    .footer .location1{
+        grid-row: 1;
+        display: flex;
+        align-self: end;
+    }
+
+    .footer .location2{
+        grid-row: 2;
+        display: flex;
+        align-self: end;
+    }
+
+    .footer .location3{
+        grid-row: 1;
+        display: flex;
+        justify-self: end;
+    }
+
+    .footer .location4{
+        grid-row: 2;
+        display: flex;
+        align-self: end;
+    }
+}
+
+
+/* Tablet */
+@media only screen and (max-width: 767px) {
+
+    .aboutSection1 {
+        display: grid;
+        grid-template-rows: 15% 1fr;
+        padding: 44px 7.3%;
+    }
+
+    .aboutSectionItem1_2 {
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        padding: 30px 40px;
+        padding-right: 64px;
+    }
+
+    .aboutSection2 {
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 80px 34px 1fr 2rem 1fr 2rem 1fr 2rem 1fr 2rem 1fr 2rem 1fr;
+        padding: 44px 7.3%;
+    }
+
+    .aboutSection2 .location1{
+        grid-row: 3;
+        grid-column: 1;
+    }
+
+    .aboutSection2 .location2{
+        grid-row: 5;
+        grid-column: 1;
+    }
+
+    .aboutSection2 .location3{
+        grid-row: 7;
+        grid-column: 1;
+    }
+
+    .aboutSection2 .location4{
+        grid-row: 9;
+        grid-column: 1;
+    }
+
+    .aboutSection2 .location5{
+        grid-row: 11;
+        grid-column: 1;
+    }
+
+    .aboutSection2 .location6{
+        grid-row: 13;
+        grid-column: 1;
+    }
+
+    .footer {
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 100%;
+        padding: 22px 7.3%;
+        
+    }
+    
+    .footer .text {
+        color: #5F002B;
+        font-family: Montauk-Regular;
+        font-size: 15px;
+        line-height: 1.1;
+        text-align: center;
+    }
+
+    .footer .location1{
+        grid-row: 1;
+    }
+
+    .footer .location2{
+        grid-row: 2;
+    }
+
+    .footer .location3{
+        grid-row: 4;
+        display: flex;
+        justify-self: center;
+
+    }
+
+    .footer .location4{
+        grid-row: 3;
+    }
+
+}
+
+.aboutSectionItem1_1 {
     grid-column: 1;
     width: 100%;
+    overflow: hidden;
 }
 
-.aboutSectionItem1_2{
+.aboutSectionItem1_2 {
     background-color: white;
     display: flex;
     flex-direction: column;
-    margin-left: 15px;
+    /* margin-left: 15px; */
     padding: 30px 40px;
     padding-right: 64px;
 }
 
-.aboutSectionItem1_2_Title{
+.aboutSectionItem1_2_Title {
     color: #5F002B;
     font-family: Fugaz One;
     font-size: 50px;
     line-height: 1.1;
 }
 
-.aboutSectionItem1_2_Paragraph{
+.aboutSectionItem1_2_Paragraph {
     color: #5F002B;
     font-family: Montauk-Regular;
     font-size: 20px;
     line-height: 1.26;
 }
 
-.aboutSection2{
-    display: grid;
-    grid-template-columns: 32.68% 0.98% 32.68% 0.98% 32.68% ;
-    grid-template-rows: 80px 34px 732px 20px 732px;
-    padding: 44px 7.3%; 
-}
 
-.aboutSectionItem2_1{
+.aboutSectionItem2_1 {
     background-color: white;
     grid-row: 1;
     grid-column: 1/spans;
@@ -66,37 +335,37 @@
     font-family: Fugaz One;
 }
 
-.aboutSectionItem2_2-7{
+.aboutSectionItem2_2-7 {
     background-color: white;
     display: flex;
     flex-direction: column;
 }
 
-.aboutSectionItem2_2-7 .title{
+.aboutSectionItem2_2-7 .title {
     color: #5F002B;
     font-size: 30px;
     font-family: Fugaz One;
-    padding: 0px 30px ;
+    padding: 0px 30px;
     padding-top: 13px;
 }
 
-.aboutSectionItem2_2-7 .description{
+.aboutSectionItem2_2-7 .description {
     color: #5F002B;
     font-size: 20px;
     font-family: Montauk-Regular;
     line-height: 1.1;
-    padding: 0px 30px ;
+    padding: 0px 30px;
 }
 
 
 /*Catering Sections*/
 
-.catering{
+.catering {
     display: grid;
     grid-template-rows: 80px 86px 500px 90px 366px 99px 357px;
 }
 
-.cateringHeader{
+.cateringHeader {
     background-color: white;
     grid-row: 1;
     display: flex;
@@ -110,16 +379,16 @@
     font-family: Fugaz One;
 }
 
-.cateringHero{
+.cateringHero {
     grid-row: 3;
 }
 
-.cateringHero *{
+.cateringHero * {
     width: 100%;
     overflow: hidden;
 }
 
-.cateringMain{
+.cateringMain {
     grid-row: 5;
     width: 100%;
     display: grid;
@@ -127,16 +396,16 @@
 }
 
 
-.cateringMain .photo{
+.cateringMain .photo {
     grid-column: 1;
 }
 
-.cateringMain .photo *{
+.cateringMain .photo * {
     width: 100%;
     overflow: hidden;
 }
 
-.cateringMain .description{
+.cateringMain .description {
     grid-column: 3;
     background-color: white;
     padding-top: 30px;
@@ -145,28 +414,28 @@
     padding-bottom: 25px;
 }
 
-.cateringMain .description .title{
-    
+.cateringMain .description .title {
+
     color: #5F002B;
     font-size: 30px;
     line-height: 1.46;
     font-family: Fugaz One;
 }
 
-.cateringMain .description .paragraph{
+.cateringMain .description .paragraph {
     color: #5F002B;
     font-size: 20px;
     line-height: 1.1;
     font-family: Montauk-Regular;
 }
 
-.cateringGallery{
+.cateringGallery {
     grid-row: 7;
     display: grid;
     grid-template-columns: 1fr 16px 1fr 16px 1fr;
 }
 
-.cateringGallery *{
+.cateringGallery * {
     width: 100%;
     overflow: hidden;
 }
@@ -185,19 +454,3 @@
 
 
 
-
-
-
-.footer{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-row: 1fr 1fr;
-    padding: 44px 7.3%; 
-}
-
-.footer .text{
-    color: #5F002B;
-    font-family: Montauk-Regular;
-    font-size: 20px;
-    line-height: 1.1;
-}
