--- a/styles/joseph.css
+++ b/styles/joseph.css
@@ -1,18 +1,9 @@
-@font-face {
-    font-family: Fugaz One;
-    src: url("../fonts/FugazOne-Regular.ttf");
-}
-
-@font-face {
-    font-family: Montauk-Regular;
-    src: url("../fonts/Montauk-Light.otf");
-}
-
-
 /*About Sections*/
 
 /* Desktop */
 @media only screen and (min-width: 1920px) {
+
+    /* About Section */
     .aboutSection1 {
         display: grid;
         grid-template-columns: 42% 58%;
@@ -35,75 +26,102 @@
         padding: 44px 7.3%;
     }
 
-    .aboutSection2 .location1{
+    .aboutSection2 .location1 {
         grid-row: 3;
         grid-column: 1;
     }
 
-    .aboutSection2 .location2{
+    .aboutSection2 .location2 {
         grid-row: 3;
         grid-column: 3;
     }
 
-    .aboutSection2 .location3{
+    .aboutSection2 .location3 {
         grid-row: 3;
         grid-column: 5;
     }
 
-    .aboutSection2 .location4{
+    .aboutSection2 .location4 {
         grid-row: 5;
         grid-column: 1;
     }
 
-    .aboutSection2 .location5{
+    .aboutSection2 .location5 {
         grid-row: 5;
         grid-column: 3;
     }
 
-    .aboutSection2 .location6{
+    .aboutSection2 .location6 {
         grid-row: 5;
         grid-column: 5;
     }
 
-    .footer {
+    /* Catering */
+
+    .catering {
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-row: 1fr 1fr;
-        padding: 44px 7.3%;
+        grid-template-rows: 80px 86px max-content 90px max-content 99px max-content;
+    }
+
+    .cateringHero {
+        grid-row: 3;
     }
     
-    .footer .text {
-        color: #5F002B;
-        font-family: Montauk-Regular;
-        font-size: 20px;
-        line-height: 1.1;
+    .cateringHero * {
+        width: 100%;
+        overflow: hidden;
     }
 
-    .footer .location1{
-        grid-row: 1;
-        display: flex;
-        align-self: end;
+    .cateringMain {
+        grid-row: 5;
+        width: 100%;
+        display: grid;
+        grid-template-columns: 700fr 16px 950fr;
+
     }
 
-    .footer .location2{
-        grid-row: 2;
-        display: flex;
-        align-self: end;
+    .cateringMain .photo {
+        grid-column: 1;
     }
 
-    .footer .location3{
-        grid-row: 1;
-        display: flex;
-        align-self: end;
-        justify-self: end;
+    .cateringMain .photo * {
+        width: 100%;
+        overflow: hidden;
     }
 
-    .footer .location4{
-        grid-row: 2;
-        display: flex;
-        align-self: end;
-        justify-self: end;
+    .cateringMain .description {
+        grid-column: 3;
+        background-color: white;
+        padding-top: 15px;
+        padding-left: 40px;
+        padding-right: 41px;
+        padding-bottom: 20px;
+        overflow: hidden;
     }
+
+    .cateringGallery {
+        grid-row: 7;
+        display: grid;
+        grid-template-columns: 1fr 16px 1fr 16px 1fr;
+    }
+
+    .cateringGallery .location1{
+        grid-column: 1;
+    }
+
+    .cateringGallery .location2{
+        grid-column: 3;
+    }
+
+    .cateringGallery .location3{
+        grid-column: 5;
+    }
+
+    
+    .cateringGallery .location4{
+        display: none;
+    }
+
 }
 
 /* Tablet */
@@ -129,77 +147,112 @@
         padding: 44px 7.3%;
     }
 
-    .aboutSection2 .location1{
+    .aboutSection2 .location1 {
         grid-row: 3;
         grid-column: 1;
     }
 
-    .aboutSection2 .location2{
+    .aboutSection2 .location2 {
         grid-row: 3;
         grid-column: 3;
     }
 
-    .aboutSection2 .location3{
+    .aboutSection2 .location3 {
         grid-row: 5;
         grid-column: 1;
     }
 
-    .aboutSection2 .location4{
+    .aboutSection2 .location4 {
         grid-row: 5;
         grid-column: 3;
     }
 
-    .aboutSection2 .location5{
+    .aboutSection2 .location5 {
         grid-row: 7;
         grid-column: 1;
     }
 
-    .aboutSection2 .location6{
+    .aboutSection2 .location6 {
         grid-row: 7;
         grid-column: 3;
     }
 
-    .footer {
+    /* Catering */
+
+    .catering {
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 35px 35px;
-        padding: 33px 7.3%;
+        grid-template-rows: 80px 43px max-content 45px max-content 50px max-content;
+        ;
+        /* 80px 86px 500px 90px 366px 99px 357px; */
+    }
+
+    .cateringHero {
+        grid-row: 3;
     }
     
-    .footer .text {
-        color: #5F002B;
-        font-family: Montauk-Regular;
-        font-size: 18px;
-        line-height: 1.1;
+    .cateringHero * {
+        width: 100%;
+        overflow: hidden;
     }
 
-    .footer .location1{
+    .cateringMain {
+        grid-row: 5;
+        width: 100%;
+        display: grid;
+        grid-template-columns: 415fr 16px 585fr;
+    }
+
+
+    .cateringMain .photo {
+        display: none;
+    }
+
+    .cateringMain .photo * {
+        width: 100%;
+        overflow: hidden;
+    }
+
+    .cateringMain .description {
+        grid-column: 1/spans;
+        background-color: white;
+        padding-top: 30px;
+        padding-left: 40px;
+        padding-right: 41px;
+        padding-bottom: 25px;
+    }
+
+    .cateringGallery {
+        grid-row: 7;
+        display: grid;
+        grid-template-columns: 1fr 16px 1fr;
+        grid-template-rows: 1fr 16px 1fr;
+    }
+
+    .cateringGallery .location1{
+        grid-column: 1;
         grid-row: 1;
-        display: flex;
-        align-self: end;
     }
 
-    .footer .location2{
-        grid-row: 2;
-        display: flex;
-        align-self: end;
-    }
-
-    .footer .location3{
+    .cateringGallery .location2{
+        grid-column: 3;
         grid-row: 1;
-        display: flex;
-        justify-self: end;
     }
 
-    .footer .location4{
-        grid-row: 2;
-        display: flex;
-        align-self: end;
+    .cateringGallery .location3{
+        grid-column: 1;
+        grid-row: 3;
     }
+    
+    .cateringGallery .location4{
+        grid-column: 3;
+        grid-row: 3;
+        width: 100%;
+        height: 100%;
+    }
+
 }
 
-
-/* Tablet */
+/* Mobile */
 @media only screen and (max-width: 767px) {
 
     .aboutSection1 {
@@ -223,69 +276,105 @@
         padding: 44px 7.3%;
     }
 
-    .aboutSection2 .location1{
+    .aboutSection2 .location1 {
         grid-row: 3;
         grid-column: 1;
     }
 
-    .aboutSection2 .location2{
+    .aboutSection2 .location2 {
         grid-row: 5;
         grid-column: 1;
     }
 
-    .aboutSection2 .location3{
+    .aboutSection2 .location3 {
         grid-row: 7;
         grid-column: 1;
     }
 
-    .aboutSection2 .location4{
+    .aboutSection2 .location4 {
         grid-row: 9;
         grid-column: 1;
     }
 
-    .aboutSection2 .location5{
+    .aboutSection2 .location5 {
         grid-row: 11;
         grid-column: 1;
     }
 
-    .aboutSection2 .location6{
+    .aboutSection2 .location6 {
         grid-row: 13;
         grid-column: 1;
     }
 
-    .footer {
+    /* Catering */
+
+    .catering {
         display: grid;
-        grid-template-rows: 1fr 1fr 1fr 1fr;
-        grid-template-columns: 100%;
-        padding: 22px 7.3%;
-        
+        grid-template-rows: 80px 30px max-content 30px max-content 30px max-content;
+    }
+
+    .cateringHero {
+        grid-row: 3;
+        display: grid;
+        place-items: center;
+        overflow: hidden;
     }
     
-    .footer .text {
-        color: #5F002B;
-        font-family: Montauk-Regular;
-        font-size: 15px;
-        line-height: 1.1;
-        text-align: center;
-    }
-
-    .footer .location1{
-        grid-row: 1;
-    }
-
-    .footer .location2{
-        grid-row: 2;
-    }
-
-    .footer .location3{
-        grid-row: 4;
-        display: flex;
+    .cateringHero * {
+        width: 200%;
         justify-self: center;
-
     }
 
-    .footer .location4{
+    .cateringMain {
+        grid-row: 5;
+        width: 100%;
+        display: grid;
+        grid-template-columns: 415fr 16px 585fr;
+    }
+
+
+    .cateringMain .photo {
+        grid-column: 1;
+        display: none;
+    }
+
+    .cateringMain .photo * {
+        width: 100%;
+        overflow: hidden;
+    }
+
+    .cateringMain .description {
+        grid-column: 1/spans;
+        background-color: white;
+        padding-top: 30px;
+        padding-left: 40px;
+        padding-right: 41px;
+        padding-bottom: 25px;
+    }
+
+
+    .cateringGallery {
+        grid-row: 7;
+        display: grid;
+        grid-template-rows: 1fr 16px 1fr 16px 1fr 16px 1fr;
+    }
+
+    .cateringGallery .location1{
         grid-row: 3;
+    }
+
+    .cateringGallery .location2{
+        grid-row: 5;
+    }
+
+    .cateringGallery .location3{
+        grid-row: 7;
+    }
+    
+    .cateringGallery .location4{
+        grid-row: 1;
+        width: 100%;
+        height: 100%;
     }
 
 }
@@ -314,7 +403,7 @@
 
 .aboutSectionItem1_2_Paragraph {
     color: #5F002B;
-    font-family: Montauk-Regular;
+    font-family: Montauk-Light;
     font-size: 20px;
     line-height: 1.26;
 }
@@ -352,18 +441,13 @@
 .aboutSectionItem2_2-7 .description {
     color: #5F002B;
     font-size: 20px;
-    font-family: Montauk-Regular;
+    font-family: Montauk-Light;
     line-height: 1.1;
     padding: 0px 30px;
 }
 
 
 /*Catering Sections*/
-
-.catering {
-    display: grid;
-    grid-template-rows: 80px 86px 500px 90px 366px 99px 357px;
-}
 
 .cateringHeader {
     background-color: white;
@@ -379,41 +463,6 @@
     font-family: Fugaz One;
 }
 
-.cateringHero {
-    grid-row: 3;
-}
-
-.cateringHero * {
-    width: 100%;
-    overflow: hidden;
-}
-
-.cateringMain {
-    grid-row: 5;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 415fr 16px 585fr;
-}
-
-
-.cateringMain .photo {
-    grid-column: 1;
-}
-
-.cateringMain .photo * {
-    width: 100%;
-    overflow: hidden;
-}
-
-.cateringMain .description {
-    grid-column: 3;
-    background-color: white;
-    padding-top: 30px;
-    padding-left: 40px;
-    padding-right: 41px;
-    padding-bottom: 25px;
-}
-
 .cateringMain .description .title {
 
     color: #5F002B;
@@ -426,31 +475,11 @@
     color: #5F002B;
     font-size: 20px;
     line-height: 1.1;
-    font-family: Montauk-Regular;
+    font-family: Montauk-Light;
 }
 
-.cateringGallery {
-    grid-row: 7;
-    display: grid;
-    grid-template-columns: 1fr 16px 1fr 16px 1fr;
-}
 
 .cateringGallery * {
     width: 100%;
     overflow: hidden;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
