--- a/styles/master.css
+++ b/styles/master.css
@@ -29,7 +29,7 @@ body {
 @media only screen and (min-width: 1920px) {
     .footer {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 2fr 3fr;
         grid-row: 1fr 1fr;
         padding: 44px 7.3%;
     }
@@ -65,13 +65,14 @@ body {
         display: flex;
         align-self: end;
         justify-self: end;
+        text-align: end;
     }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1919px) {
     .footer {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 2fr 3fr;
         grid-template-rows: 35px 35px;
         padding: 33px 7.3%;
     }
