--- a/styles/georgeStyles.css
+++ b/styles/georgeStyles.css
@@ -4,7 +4,6 @@
 .header {
     margin-top: 1rem;
     margin-bottom: 1rem;
-    /* height: 37.5em; */
     height: 55.56vh;
     background-image: url(../assets/homeHero.jpg);
     background-size: cover;
@@ -26,4 +25,27 @@
     color: #5F002B;
     font-size: 50px;
     font-family: Fugaz One;
+}
+
+@media only screen and (max-width: 991px) {
+    .header {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    height: 25vh;
+    background-image: url(../assets/homeHero.jpg);
+    background-size: cover;
+    }
+
+    .photo-card-md {
+        width: 298.5px; 
+        border-radius: 0; 
+        margin: auto; 
+        float: none; 
+        margin-bottom: 0.75rem;
+    }
+  }
+  @media only screen and (min-width: 991px) {
+  .photo-card {
+    width: 398px; border-radius: 0; margin: auto; float: none; margin-bottom: 0.75rem;
+  }
 }
