--- a/styles/master.css
+++ b/styles/master.css
@@ -10,12 +10,11 @@ body {
 .nav-link {
     font-family: 'Fugaz One', sans-serif;
     color: #5F002B;
-    margin-right: 1rem;
 }
 
 .navbar {
     padding-left: 10%;
-    padding-right: 128px;
+    padding-right: 7.3%;
 }
 
 
