--- a/styles/master.css
+++ b/styles/master.css
@@ -110,6 +110,10 @@ body {
 }
 
 @media only screen and (max-width: 767px) {
+    .navImage{
+        width: 50%;
+    }
+   
     .footer {
         display: grid;
         grid-template-rows: 1fr 1fr 1fr 1fr;
