--- a/styles/master.css
+++ b/styles/master.css
@@ -36,7 +36,7 @@ body {
     
     .footer .text {
         color: #5F002B;
-        font-family: Montauk-Regular;
+        font-family: Montauk-Light;
         font-size: 20px;
         line-height: 1.1;
     }
@@ -79,7 +79,7 @@ body {
     
     .footer .text {
         color: #5F002B;
-        font-family: Montauk-Regular;
+        font-family: Montauk-Light;
         font-size: 18px;
         line-height: 1.1;
     }
@@ -125,7 +125,7 @@ body {
     
     .footer .text {
         color: #5F002B;
-        font-family: Montauk-Regular;
+        font-family: Montauk-Light;
         font-size: 15px;
         line-height: 1.1;
         text-align: center;
